--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"/>-->
 
-    <com.example.shiwu.customviewstudy.prectise.PieChartView
+    <com.example.shiwu.customviewstudy.view.PieChartView
         android:id="@+id/circle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
